compiler/testData/diagnostics/tests/annotations/parsingOfJavaLikeAnnotationDeclaration.kt
@Retention(AnnotationRetention.RUNTIME
<!UNRESOLVED_REFERENCE!>annotation<!> <!DECLARATION_IN_ILLEGAL_CONTEXT!>class Validation()<!SYNTAX, SYNTAX!><!><!>